# knkgpt

./: .gitignore  Makefile  README.md  UV_FIX.md  benchmark_data_loading.py  compare_pretokenization.py  launch_training.sh  pretokenization_guide.md  pretokenize_dataset.py  pretokenize_dataset_optimized.py  pretokenize_dataset_parallel.py  pyproject.toml  requirements.txt  run_training.py  train_gpt_knights_knaves.ipynb  train_gpt_knights_knaves.py  verify_setup.py
data/: knights_knaves.py
data/knights_knaves/: __init__.py  tokenizer.py
mingpt/: __init__.py  dataset.py  model.py  pretokenized_dataset.py  tokenizer.py  trainer.py  utils.py  wandb_utils.py
scripts/: pretokenize_and_train.sh  setup.sh  setup_simple.sh
