[project]
name = "knkgpt"
version = "0.1.0"
description = "GPT model trained on Knights and Knaves puzzles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "jsonlines>=3.1.0",
    "matplotlib>=3.7.0",
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mingpt", "data/knights_knaves"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
