[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knkgpt"
version = "0.1.0"
description = "GPT model trained on Knights and Knaves puzzles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "datasets>=2.14.0",
    "matplotlib>=3.7.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.hatch.build.targets.wheel]
packages = ["mingpt"]
